# compiler-prototype

./: .gitignore  readme.md
compiler-prototype-cpp/: CMakeLists.txt  build_vsstudio_x64.sh
compiler-prototype-cpp/cmake/: setup_compiler.cmake
compiler-prototype-cpp/libcompiler/: CMakeLists.txt  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
compiler-prototype-cpp/rust/: main.rs
compiler-prototype-cpp/test/: CMakeLists.txt  main.cpp
compiler-prototype-py/: test.py
compiler-prototype-py/compiler/: __init__.py  ast.py  lexer.py  parser.py
compiler-prototype-py/prototype/: ast_manipulation.py  how_to_use_astor.py  py_ast_manipulation_nonenode.py  py_ctype.py  py_inspect_ast.py  py_package_mymod.py  py_submodule.sh
compiler-prototype-py/prototype/mymod/: __init__.py  core.py  types.py  utility.py
